k8s/overlays/production/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: legalcase-ingress
  annotations:
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "INGRESSCOOKIE"
    nginx.ingress.kubernetes.io/session-cookie-samesite: "Lax"
    nginx.ingress.kubernetes.io/session-cookie-secure: "true"
spec:
  tls:
    - hosts:
        - legalcase.ng-itconsulting.com
        - legalcase.fr
      secretName: legalcase-tls-prod
  rules:
    - host: legalcase.ng-itconsulting.com
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: legalcase-backend
                port:
                  number: 8080
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: legalcase-backend
                port:
                  number: 8080
          - path: /login/oauth2
            pathType: Prefix
            backend:
              service:
                name: legalcase-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: legalcase-frontend
                port:
                  number: 80
    - host: legalcase.fr
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: legalcase-backend
                port:
                  number: 8080
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: legalcase-backend
                port:
                  number: 8080
          - path: /login/oauth2
            pathType: Prefix
            backend:
              service:
                name: legalcase-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: legalcase-frontend
                port:
                  number: 80
